--- a/.config
+++ b/.config
@@ -2195,7 +2195,8 @@ CONFIG_DUMMY_CONSOLE=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
-CONFIG_LOGO_LINUX_CLUT224=y
+# CONFIG_LOGO_LINUX_CLUT224 is not set
+CONFIG_LOGO_CURIE1_CLUT224=y
 # CONFIG_LOGO_CHARGER_CLUT224 is not set
 # CONFIG_LOGO_G3_CLUT224 is not set
 # CONFIG_LOGO_LINUX_BMP is not set
