Fix touchscreen + IOS + FIX LCD

--- a/arch/arm/configs/edison_OMNI_defconfig
+++ b/arch/arm/configs/edison_OMNI_defconfig
@@ -248,8 +248,9 @@ CONFIG_TABLET_USB_HANWANG=y
 CONFIG_TABLET_USB_KBTAB=y
 CONFIG_TABLET_USB_WACOM=y
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_FT5606_MALATA=y
 CONFIG_TOUCHSCREEN_GT9110_MALATA=y
+CONFIG_TOUCHSCREEN_GT8110_MALATA=y
+CONFIG_TOUCHSCREEN_FT5606_MALATA=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_KEYCHORD=y
 CONFIG_INPUT_UINPUT=y
@@ -327,7 +328,7 @@ CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
 CONFIG_DISPLAY_SUPPORT=y
-CONFIG_LCD_EJ101IA01G=y
+CONFIG_LCD_B101EW05=y
 CONFIG_FB_ROCKCHIP=y
 CONFIG_DUAL_LCDC_DUAL_DISP_IN_KERNEL=y
 CONFIG_LCDC_RK30=y
