--- a/drivers/video/display/screen/Makefile
+++ b/drivers/video/display/screen/Makefile
@@ -14,7 +14,7 @@ obj-$(CONFIG_LCD_RK29_LG_LP097X02)+=	lcd_LG_LP097X02.o
 obj-$(CONFIG_LCD_LG_LP097X02)+=	lcd_LG_LP097X02.o
 obj-$(CONFIG_LCD_LG_LP097X02_DS975)+=	lcd_LG_LP097X02_ds975.o
 obj-$(CONFIG_LCD_TJ048NC01CA) 		+= lcd_tj048nc01ca.o
-
+obj-$(CONFIG_LCD_B101EW05)    += lcd_b101ew05.o
 obj-$(CONFIG_LCD_RK29_LS035Y8DX02A) += lcd_ls035y8dx02a.o
 obj-$(CONFIG_LCD_RK29_LS035Y8DX04A) += lcd_ls035y8dx04a.o
 obj-$(CONFIG_LCD_RK29_HSD100PXN) += lcd_hsd100pxn.o
