--- a/arch/arm/configs/edison_OMNI_defconfig
+++ b/arch/arm/configs/edison_OMNI_defconfig
@@ -295,6 +295,7 @@ CONFIG_BATTERY_RK30_AC_CHARGE=y
 CONFIG_BATTERY_RK30_USB_CHARGE=y
 CONFIG_BATTERY_RK30_USB_AND_CHARGE=n
 CONFIG_BATTERY_RK30_VOL3V8=y
+CONFIG_BATTERY_AOSBIS_CAPACITY99_CHECK=y
 CONFIG_BATTERY_BT_B0BDN_3574108=y
 CONFIG_POWER_ON_CHARGER_DISPLAY=y
 # CONFIG_HWMON is not set
