--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -115,6 +115,11 @@ config BATTERY_PMU
 	  Say Y here to expose battery information on Apple machines
 	  through the generic battery class.
 
+config BATTERY_AOSBIS_CAPACITY99_CHECK
+	bool "Support battery as full state when capacity is 99% for one hour"
+
+
+
 config BATTERY_OLPC
 	tristate "One Laptop Per Child battery"
 	depends on X86_32 && OLPC
