--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -117,8 +117,8 @@ config BATTERY_PMU
 
 config BATTERY_AOSBIS_CAPACITY99_CHECK
 	bool "Support battery as full state when capacity is 99% for one hour"
-
-
+	default y
+	
 
 config BATTERY_OLPC
 	tristate "One Laptop Per Child battery"
